[package]
name = "tinysse"
version = "0.6.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-stream = "0.3.6"
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header", "typed-routing", "form", "query"] }
base64 = "0.22.1"
bytesize = { version = "1.3.2", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.33", features = ["derive", "env", "wrap_help"] }
derive_more = { version = "1.0.0", features = ["full"] }
fernet = { version = "0.2.2", default-features = false, features = ["rustcrypto"] }
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
humantime = "2.2.0"
mime = "0.3.17"
mlua = { version = "0.10.3", features = ["async", "lua54", "send", "serialize", "vendored"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_html_form = "0.2.7"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tokio-sqlite = { version = "0.1.5", features = ["bundled"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }
